packages/preview/aio-studi-and-thesis/0.1.1/CHANGELOG.md
<!-- Reference: https://github.com/typst-community/typst-package-template/blob/main/CHANGELOG.md -->

# Changelog

## [Unreleased]

## [0.1.0] - 2024-07-30

Initial Release, thanks [@SillyFreak]

## [0.1.1] - 2025-03-30

### Changed

- Updated used packages, thanks [@fritz-m-h]
- BREAKING: in `abbreviations()`, the `desc` parameter is now named `description`, thanks [@fritz-m-h]
- For glossary entries / abbreviations, having only a long form is not permitted

### Fixed

- Fixed broken todo functionality (caused by deprecated locate function), thanks [@fritz-m-h]
- Fixed broken footer when `thesis-compliant` was set to `true`, thanks [@fritz-m-h]

> The template is now compatible with Typst 0.13

<!--
Below are the target URLs for each version
You can link version numbers (in level-2 headings)
to the corresponding tag on GitHub, or the diff
in comparison to the previous release
-->

[Unreleased]: https://github.com/fuchs-fabian/typst-template-aio-studi-and-thesis/compare/v0.1.0...HEAD
[0.1.0]: https://github.com/fuchs-fabian/typst-template-aio-studi-and-thesis/releases/tag/v0.1.0
[0.1.1]: https://github.com/fuchs-fabian/typst-template-aio-studi-and-thesis/releases/tag/v0.1.1

<!--
Below are the GitHub profile links of contributors
-->

[@SillyFreak]: https://github.com/SillyFreak
[@fritz-m-h]: https://github.com/fritz-m-h